docs: move positions to a new endpoint
